@@ -22,20 +22,20 @@ Ubuntu Package:
 
 $ cd ../debian/
 $ git checkout master
-$ git-import-orig -u 0.6.4 ~/projects/xboxdrv/htdocs/xboxdrv-linux-0.6.4.tar.bz2 
-$ dch -v "0.6.4-1" "xboxdrv 0.6.4 release"
+$ git-import-orig -u 0.6.5 ~/projects/xboxdrv/htdocs/xboxdrv-linux-0.6.5.tar.bz2 
+$ dch -v "0.6.5-1" "xboxdrv 0.6.5 release"
 $ git-buildpackage --git-no-create-orig --git-tag --git-builder="debuild -S"
-$ sudo pbuilder --build xboxdrv_0.6.4.dsc
-$ dput my-ppa xboxdrv_0.6.4_source.changes
+$ sudo pbuilder --build xboxdrv_0.6.5.dsc
+$ dput my-ppa xboxdrv_0.6.5_source.changes
 
 # Ubuntu 10.04 (LTS)
 
 $ cd ../debian/
 $ git checkout master-lts
-$ dch -b -v "0.6.4-1~lucid1" --distribution lucid "xboxdrv 0.6.4 backport"
+$ dch -b -v "0.6.5-1~lucid1" --distribution lucid "xboxdrv 0.6.5 backport"
 $ git-buildpackage --git-no-create-orig --git-debian-branch=master-lts --git-tag --git-builder="debuild -S"
-$ sudo pbuilder --build xboxdrv_0.6.4-1~lucid1.dsc
-$ dput my-ppa xboxdrv_0.6.4_source.changes
+$ sudo pbuilder --build xboxdrv_0.6.5-1~lucid1.dsc
+$ dput my-ppa xboxdrv_0.6.5_source.changes
 
 
 Stuff to do before 0.6.5 release:
