@@ -3,6 +3,8 @@ xboxdrv 0.6.5 - (22/Jan/2011)
 
 * fixed incorrect variable initalisation, leading to button presses
   getting lost sometimes
+* fixed initialisation issue for Chatpad connected to controllers with
+  bcdDevice 0x0114
 
 
 xboxdrv 0.6.4 - (13/Jan/2011)
